Do Not Edit!  This is a generated file.
	You should edit the NEWS file instead.

2006-03-23 14:37  rkowen

	* version.c, init/csh.in, testsuite/modules.00-init/006-procs.exp,
	testsuite/modules.70-maint/045-listlong.exp,
	testsuite/modules.90-avail/050-long.exp: Merged in the 3.2.1
	changes.

2006-03-23 13:51  rkowen

	* testsuite/: modules.70-maint/045-listlong.exp,
	modules.90-avail/050-long.exp: Fixed the tests to use regexps to
	allow the date/time stamp to vary for the listed module.

2006-03-23 13:50  rkowen

	* testsuite/modules.00-init/006-procs.exp: Add '--' to the regexp
	call so any tests that have lines that start with '-' will not be
	interpreted as command options.

2006-03-23 13:49  rkowen

	* init/csh.in: Allow the command to pass a non-zero return status.

2006-03-07 11:43  rkowen

	* ModuleCmd_Load.c, NEWS, cmdModule.c, main.c, modules_def.h,
	utility.c, doc/modulefile.4.in, testsuite/config/unix.exp,
	testsuite/modulefiles/break/2.0, testsuite/modulefiles/break/4.0,
	testsuite/modulefiles/continue/1.0,
	testsuite/modulefiles/continue/2.0,
	testsuite/modulefiles/continue/3.0,
	testsuite/modulefiles/continue/4.0, testsuite/modulefiles/exit/1.0,
	testsuite/modulefiles/exit/2.0, testsuite/modulefiles/exit/3.0,
	testsuite/modules.00-init/006-procs.exp,
	testsuite/modules.50-cmds/210-exit.exp,
	testsuite/modules.50-cmds/220-continue.exp,
	testsuite/modules.50-cmds/230-loop.exp,
	testsuite/modules.50-cmds/999-cleanup.exp: Rolled in the 3.2.0 exit
	changes.

2006-03-07 11:18  rkowen

	* main.c, modules_def.h, utility.c,
	testsuite/modules.50-cmds/210-exit.exp: The resultant string to be
	evaluated will now append a "test 0 = 1" string if an exit is
	called.

2006-02-21 14:26  rkowen

	* testsuite/modulefiles/: continue/1.0, exit/1.0: file 1.0 was
	initially added on branch modules-3-2-0.

2006-02-21 14:26  rkowen

	* testsuite/modulefiles/: continue/2.0, exit/2.0: file 2.0 was
	initially added on branch modules-3-2-0.

2006-02-21 14:26  rkowen
