@@ -1,6 +1,14 @@
 Do Not Edit!  This is a generated file.
 	You should edit the NEWS file instead.
 
+2006-03-23 15:38  rkowen
+
+	* init/csh.in: Rolled in init csh fix from 3.2.1
+
+2006-03-23 15:31  rkowen
+
+	* version.c, init/csh.in: Fixed the csh init script.
+
 2006-03-23 14:37  rkowen
 
 	* version.c, init/csh.in, testsuite/modules.00-init/006-procs.exp,
@@ -1524,7 +1532,7 @@ Do Not Edit!  This is a generated file.
 
 2003-08-07 14:07  harlan
 
-	* tcl/modulecmd.tcl: Add $Revision: 1.53 $ to the version
+	* tcl/modulecmd.tcl: Add $Revision: 1.54 $ to the version
 
 2003-08-07 12:52  harlan
 
